--- a/main.html
+++ b/main.html
@@ -5,8 +5,34 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+  <h1>My Playlist</h1>
+  <h2>Now Playing...</h2>
+  <h2>MP3 songs</h2>
+  <div>
+    <ul>
+      <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 1</a></li>
+      <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 2</a></li>
+      <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 3</a></li>
+      <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 4</a></li>
+      <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 5</a></li>
+    </ul>
+  </div>
+  <div class="player_one">
+    <h2>Audio Player</h2>
+    <audio controls>
+      <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
+  </div>
+  <div class="player_two">
+    <h2>Video Player</h2>
+    <video controls width="320" height="240">
+      <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  <p style="text-align:center;">This is an <s>old playlist</s> but updated with new songs!</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
